Fix lesson elements scrolling over site header due to same z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,7 @@ button a {
 .site-header {
     width: 100%;
     background-color: #ffffff;
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     max-height: 60px;
     filter: drop-shadow(0px 0px 5px #000000);
